# Proiect_POO_Retea_Calculatoare

./: AVL  AVL.cpp  CMakeLists.txt  README.md  Review.xlsx  compile.sh  file.in  grup.in  proiect  proiect.cpp  review1.docx  users.in
include/: calculator.h  comenzi.h  date_fisier.h  director.h  exec.h  file.h  grupa.h  utilizator.h
src/: calculator.cpp  comenzi.cpp  date_fisier.cpp  director.cpp  file.cpp  grupa.cpp  proiect.cpp  utilizator.cpp
